# mate-rov-src

./: CMakeLists.txt  ChangeLog  README.md  TODO
lib/: Makefile
lib/joystick/: joystick.c  joystick.h
lib/screen/: screen.c  screen.h
src/: CMakeLists.txt  ChangeLog  arduino.c  common.h
src/comm/: comm.c  comm.h  msgqueue.c  opcode.h
src/controls/: controls.c  controls.h  init-logic.scm  init-logic.scm.ch  keybinds-parser.scm  keybinds-parser.scm.ch  keybinds.c  keybinds.h  pin-parser.scm  pin-parser.scm.ch  pinlayout.c  pinlayout.h
src/librov/: joystick.h  screen.h
src/micro/: arduino.c  arduinoh.h  ssg.c
src/motor/: motor.c  motor.h
src/ui/: keyboard.c  keyboard.h  main.c  screen.c  screen.h  stats.c  stats.h
